# AutoDiffDualQuatICP

./: .gitignore  CMakeLists.txt  README.md
include/: AnalyticalJacobian.h  CeresFunctors.h  DualQuaternion.h  GeometryModel.h
src/: GeometryModel.cpp  main.cpp
